--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -54,6 +54,6 @@
 </nav>
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="/user_account/view">Account</a></li>
-  <li><a href="">Order </a></li>
+  <li><a href="/user_account/view_order">Order </a></li>
   <li><a href="/auth/logout">Logout </a></li>
 </ul>
