--- a/src/resources/views/user/checkout.hbs
+++ b/src/resources/views/user/checkout.hbs
@@ -13,7 +13,7 @@
         </div>
         <div class="input-field col s6">
           <span for="phone_number">Phone Number</span>
-          <input id="phone_number" type="number"  value="{{account.phone_number}}"class="validate" name="phone_number">
+          <input min= 0  id="phone_number" type="number"  value="0{{account.phone_number}}"class="validate" name="phone_number">
         </div>
       </div>
       <div class="row">
