--- a/src/resources/views/user/user_account_order.hbs
+++ b/src/resources/views/user/user_account_order.hbs
@@ -140,9 +140,9 @@
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>
-                 <a data-position="top" data-tooltip="Revert" href="/user_account/status/{{this.order_status}}/{{this._id}}/user_back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
+                 {{!-- <a data-position="top" data-tooltip="Revert" href="/user_account/status/{{this.order_status}}/{{this._id}}/user_back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a> --}}
               <a data-position="top" data-tooltip="Detail" href="/user_account/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
-                  <a data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn tooltipped  btn-small  modal-trigger btn_delete red" href="#modal2"><i class="material-icons">delete</i></a>
+                  {{!-- <a data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn tooltipped  btn-small  modal-trigger btn_delete red" href="#modal2"><i class="material-icons">delete</i></a> --}}
              
                </td>
                
