fix login,pagination product

--- a/src/resources/views/admin/product_manament.hbs
+++ b/src/resources/views/admin/product_manament.hbs
@@ -1,5 +1,9 @@
 {{>header_admin}}
- 
+ <style>
+   .dropdown-content{
+     display:none;
+   }
+ </style>
 <div class="create-container">
 <div class="table-foods container">
       <div class="row">
