--- a/src/resources/views/admin/update_product.hbs
+++ b/src/resources/views/admin/update_product.hbs
@@ -1,6 +1,10 @@
 {{>header_admin}}
 
- 
+ <style> 
+   .dropdown-content{
+     display: none;
+   }
+ </style>
 <div class="container ">
     <h4 class="center">Update Product</h4>
     <div class="paper_container z-depth-1">
