--- a/src/resources/views/user/user_account_order.hbs
+++ b/src/resources/views/user/user_account_order.hbs
@@ -59,7 +59,7 @@
             {{/each}}         
         </tbody>
       </table>
-        {{>pagination}}
+        {{!-- {{>pagination}} --}}
       </div>
     </div>
       <div id="orderDelivery" class=""><br>
@@ -104,10 +104,10 @@
                   <td colspan="7" class="center text-center">
                       Order Empty
                 </tr>
-            {{/each}}   
+            {{/each}}
         </tbody>
       </table>
-        {{>pagination}}
+        {{!-- {{>pagination}} --}}
       </div>
 
     </div>
@@ -158,7 +158,7 @@
           
         </tbody>
       </table>
-        {{>pagination}}
+        {{!-- {{>pagination}} --}}
         
       </div>
 
@@ -212,7 +212,7 @@
           
         </tbody>
       </table>
-        {{>pagination}}
+        {{!-- {{>pagination}} --}}
       </div>
 
     </div>
