--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -953,8 +953,8 @@ section .more {
 .products-container .right .card .card-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 200px;
+  /* justify-content: space-between; */
+  height: 197px;
 }
 
 .products-container .right .card .card-image {
@@ -1130,7 +1130,9 @@ section .more {
 .product-details-container .left .pd-price {
   margin-top: 20px;
   font-weight: 500;
-  color: var(--secondary-color);
+  font-size: 20px;
+  color: #007bc4;
+  /* color: var(--secondary-color); */
 }
 
 .product-details-container .left .pd-note {
