--- a/src/resources/views/auth/signup.hbs
+++ b/src/resources/views/auth/signup.hbs
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div
-        class="col s12 m6 push-l6 z-depth-4 card-panel border-radius-6 login-card bg-opacity-8 inside_signup"
+        class="col s12 m6 push-l6 z-depth-4 card-panel border-radius-6 login-card bg-opacity-8 inside_auth"
       >
 
         <form class="col s12" action="/auth/register" method="POST">
