--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -9,7 +9,7 @@
   <div id="nav-mobile" class="left hide-on-med-and-down">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="/goods" class="nav-link">Our Products</a>
+        <a href="/goods?Page=1" class="nav-link">Our Products</a>
       </li>
       <li class="nav-item">
         <a href="/news" class="nav-link">Articles</a>
