--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -111,19 +111,33 @@
                 {{/each}}
               </div>
             </section>
-            <ul class="pagination center">
+            <div class="pagination_container">
+               <ul class="pagination center">
               <li class="disabled">
-                <a href="#!"><i class="material-icons">chevron_left</i></a>
+                <a href=""><i class="material-icons">chevron_left</i></a>
               </li>
-              <li class="btn-active"><a href="#!" class="white-text">1</a></li>
-              <li class="waves-effect"><a href="#!">2</a></li>
-              <li class="waves-effect"><a href="#!">3</a></li>
+              <li class="btn-active"><a href="?Page=1" class="white-text">1</a></li>
+              <li class=""><a href="?Page=2">2</a></li>
+              <li class=""><a href="?Page=3">3</a></li>
               <li class="waves-effect"><a href="#!">4</a></li>
               <li class="waves-effect"><a href="#!">5</a></li>
-              <li class="waves-effect">
-                <a href="#!"><i class="material-icons">chevron_right</i></a>
+              <li class="disabled">
+                <a href=""><i class="material-icons">chevron_right</i></a>
               </li>
             </ul>
+            </div>
+           
+            <script>
+              $(document).ready(function(){
+              var path = window.location.href
+              $('.pagination li a').each(function(){ if (this.href === path)
+              { 
+                $(this).parent('li').addClass('btn-active')
+                } 
+              else
+              { $(this).parent('li').removeClass('btn-active') } })
+              })
+            </script>
           </div>
         </div>
       </div>
