--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -118,15 +118,15 @@
               </li>
               <li class="btn-active"><a href="?Page=1" class="white-text">1</a></li>
               <li class=""><a href="?Page=2">2</a></li>
-              <li class=""><a href="?Page=3">3</a></li>
-              <li class="waves-effect"><a href="#!">4</a></li>
-              <li class="waves-effect"><a href="#!">5</a></li>
+              <li class="waves-effect"><a href="?Page=3">3</a></li>
+              <li class="waves-effect"><a href="?Page=4">4</a></li>
+              <li class="waves-effect"><a href="?Page=5">5</a></li>
               <li class="disabled">
                 <a href=""><i class="material-icons">chevron_right</i></a>
               </li>
             </ul>
             </div>
-           
+
             <script>
               $(document).ready(function(){
               var path = window.location.href
